test/files/neg/t10270.check
Main_2.scala:5: warning: Unused import
    import Implicits._
                     ^
1 warning
error: No warnings can be incurred under -Werror.
